syntax = "proto3";
package inventory;

option java_multiple_files = true;
option java_package = "inventory";
option java_outer_classname = "InventoryProto";
option objc_class_prefix = "INV";

service GreetingService {
  rpc Greet (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}

